# copykitt

./: .gitignore  README.md  pyproject.toml  restapi.http
app/: copykitt.py  copykitt_api.py
copykitt-infra/: cdk.json  package-lock.json  package.json
copykitt-infra/lambda_base_layer/: Dockerfile  generate_base_layer.sh
copykitt-site/: package-lock.json  package.json
copykitt-site/components/: copykitt.tsx  form.tsx  result.tsx
copykitt-site/pages/: index.tsx
copykitt-site/styles/: globals.css
