[tool.poetry]
name = "copykitt"
version = "0.1.0"
description = "Build an AI-driven SaaS Application: FULLSTACK Tutorial with Python, React, and AWS"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.26.1"
fastapi = {extras = ["all"], version = "^0.89.1"}
mangum = "^0.17.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^0.991"
black = "^22.12.0"
isort = "^5.11.4"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
